# pyopencv

./: Documentation.md  FAQ.md  Installation.md  Installation_Boost_Python.md  Installation_OpenCV.md  Installation_PyOpenCV.md  Notes.md  ProjectHome.md  README.md
branches/2.1.0_cmake/src/: CMakeLists.txt  TODO  setup.py
branches/2.1.0_cmake/src/package/: __init__.py  common.py  cv_h.py  cv_hpp.py  cvaux.py  cxcore_h.py  cxcore_hpp.py  cxcore_hpp_point.py  cxcore_hpp_vec.py  cxflann_h.py  cxtypes_h.py  info.py  ml.py  stl.py
branches/2.1.0_cmake/src/sdopencv/: diffchar_2d.hpp
src_old/: CMakeLists.txt
src_old/pyopencv/: interfaces.py
src_old/pyopencv/pyopencvext/: BaseColumnFilter.pypp.cpp  CompositeIndexParams.pypp.cpp  CompositeIndexParams.pypp.hpp  CvANN_MLP.pypp.hpp  CvBoost.pypp.cpp  CvCamShiftTracker.pypp.cpp  CvChainPtReader.pypp.hpp  CvContourTree.pypp.cpp  CvDTreeTrainData.pypp.cpp  CvDefParam.pypp.cpp  CvFuzzyCurve.pypp.cpp  CvGraphVtx.pypp.hpp  CvGraphVtx2D.pypp.hpp  CvHidHaarFeature.pypp.hpp  CvLSHOperations.pypp.hpp  CvModule.pypp.hpp  CvPoint2D32f.pypp.cpp  CvSVMDecisionFunc.pypp.cpp  CvSVMParams.pypp.cpp  CvStarKeypoint.pypp.hpp  CvStereoBMState.pypp.cpp  CvSubdiv2DPoint.pypp.cpp  CvVSModule.pypp.cpp  DifferentialImage.pypp.cpp  KeyPoint.pypp.hpp  Mesh3D.pypp.cpp  Octree.pypp.hpp  PatchGenerator.pypp.hpp  PlanarObjectDetector.pypp.hpp  Point2i.pypp.cpp  Point3d.pypp.hpp  Ptr_FilterEngine.pypp.cpp  Ptr_Mat.pypp.cpp  Range.pypp.cpp  RotatedRect.pypp.cpp  SavedIndexParams.pypp.hpp  Seq_CvConnectedComp.pypp.hpp  Seq_Point2i.pypp.cpp  Size2f.pypp.cpp  StarDetector.pypp.cpp  (+34 more)
src_old/pyopencv/pyopencvext/core/: sequence.hpp
tags/2.1.0.wr1.2.0/src/: CMakeLists.txt  ChangeLog  THANKS  TODO  setup.py
trunk/src/: CMakeLists.txt  ChangeLog  CvConnectedComp.pypp.cpp  CvContourScanner.pypp.cpp  CvEMParams.pypp.cpp  CvFeatureTree.pypp.cpp  CvFileNode.pypp.cpp  CvFuzzyController.pypp.cpp  CvFuzzyFunction.pypp.cpp  CvFuzzyMeanShiftTracker.pypp.cpp  CvFuzzyPoint.pypp.cpp  CvGraph.pypp.hpp  CvGraphVtx2D.pypp.cpp  CvHaarClassifierCascade.pypp.cpp  CvHistogram.pypp.cpp  CvMSERParams.pypp.cpp  CvMemStorage.pypp.cpp  CvMemStoragePos.pypp.cpp  CvModule.pypp.cpp  CvNArrayIterator.pypp.cpp  CvSeq.pypp.cpp  CvStarDetectorParams.pypp.cpp  CvStatModel.pypp.cpp  CvString.pypp.cpp  CvSubdiv2DPoint.pypp.cpp  CvType.pypp.cpp  CvVectors.pypp.cpp  FileStorage.pypp.cpp  Index.pypp.cpp  LevMarqSparse.pypp.cpp  LinearIndexParams.pypp.cpp  MSER.pypp.cpp  OneWayDescriptorBase.pypp.cpp  PatchGenerator.pypp.cpp  PlanarObjectDetector.pypp.cpp  Point2d.pypp.hpp  Point2i.pypp.cpp  Point3f.pypp.cpp  Ptr_BaseColumnFilter.pypp.cpp  Ptr_BaseFilter.pypp.cpp  (+29 more)
trunk/src/doc/: README
trunk/src/package/cv_h_ext/: cv_h_ext_classes_3.pypp.cpp  cv_h_ext_classes_3.pypp.hpp  cv_h_ext_enumerations.pypp.cpp  cv_h_ext_enumerations.pypp.hpp  cv_h_ext_free_functions.pypp.cpp  cv_h_wrapper.hpp
trunk/src/package/cv_hpp_ext/: __ctypes_integration.pypp.hpp  cv_hpp_ext.main.cpp  cv_hpp_ext_classes_2.pypp.cpp  cv_hpp_ext_classes_3.pypp.cpp  cv_hpp_ext_free_functions.pypp.cpp  cv_hpp_wrapper.hpp
trunk/src/package/cvaux_ext/: cvaux_ext_classes_1.pypp.cpp  cvaux_ext_classes_5.pypp.cpp  cvaux_ext_classes_5.pypp.hpp  cvaux_ext_classes_6.pypp.cpp  cvaux_ext_classes_6.pypp.hpp  cvaux_ext_enumerations.pypp.cpp  cvaux_ext_enumerations.pypp.hpp  cvaux_ext_free_functions.pypp.hpp  cvaux_template_instantiations.hpp
trunk/src/package/cxcore_h_ext/: cxcore_h_ext.main.cpp  cxcore_h_ext_classes_1.pypp.hpp  cxcore_h_ext_classes_2.pypp.hpp  cxcore_h_ext_classes_3.pypp.cpp  cxcore_h_ext_enumerations.pypp.cpp  cxcore_h_ext_enumerations.pypp.hpp  cxcore_h_ext_free_functions.pypp.cpp
trunk/src/package/cxcore_hpp_ext/: cxcore_hpp_ext.main.cpp  cxcore_hpp_ext_classes_2.pypp.hpp  cxcore_hpp_ext_classes_3.pypp.cpp  cxcore_hpp_ext_classes_4.pypp.cpp  cxcore_hpp_template_instantiations.hpp
trunk/src/package/cxcore_hpp_point_ext/: __call_policies.pypp.hpp  cxcore_hpp_point_ext.main.cpp  cxcore_hpp_point_ext_classes_1.pypp.cpp  cxcore_hpp_point_ext_classes_2.pypp.cpp  cxcore_hpp_point_ext_classes_2.pypp.hpp  cxcore_hpp_point_ext_classes_3.pypp.hpp  cxcore_hpp_point_wrapper.hpp
trunk/src/package/cxcore_hpp_vec_ext/: cxcore_hpp_vec_ext_classes_3.pypp.cpp  cxcore_hpp_vec_ext_classes_5.pypp.cpp  cxcore_hpp_vec_ext_classes_5.pypp.hpp  cxcore_hpp_vec_ext_classes_6.pypp.cpp  cxcore_hpp_vec_ext_classes_6.pypp.hpp  cxcore_hpp_vec_ext_classes_7.pypp.hpp  cxcore_hpp_vec_ext_classes_8.pypp.cpp  cxcore_hpp_vec_wrapper.hpp
trunk/src/package/cxtypes_h_ext/: cxtypes_h_ext_classes_1.pypp.cpp  cxtypes_h_ext_classes_1.pypp.hpp  cxtypes_h_ext_classes_2.pypp.hpp  cxtypes_h_ext_classes_3.pypp.cpp  cxtypes_h_ext_enumerations.pypp.hpp  cxtypes_h_ext_free_functions.pypp.cpp  cxtypes_h_ext_free_functions.pypp.hpp  cxtypes_h_ext_global_variables.pypp.hpp  cxtypes_h_wrapper.hpp
trunk/src/package/highgui_ext/: highgui_ext.main.cpp  highgui_ext_free_functions.pypp.cpp
trunk/src/package/ml_ext/: ml_ext_classes_1.pypp.cpp  ml_ext_classes_2.pypp.cpp  ml_ext_classes_3.pypp.cpp  ml_ext_classes_4.pypp.cpp  ml_ext_classes_4.pypp.hpp  ml_ext_classes_5.pypp.cpp  ml_ext_classes_5.pypp.hpp  (+6 more)
trunk/src/pyopencv/: __init__.py  core.py
trunk/src/pyopencvext/: Complexd.pypp.cpp  CvFileStorage.pypp.cpp  CvFileStorage.pypp.hpp  CvGenericHash.pypp.cpp  CvGraphEdge.pypp.cpp  CvGraphVtx.pypp.cpp  CvHaarStageClassifier.pypp.hpp  CvLevMarq.pypp.cpp  CvNormalBayesClassifier.pypp.cpp  CvParamGrid.pypp.cpp  CvQuadEdge2D.pypp.cpp  CvSeqReader.pypp.cpp  CvSeqWriter.pypp.cpp  CvSetElem.pypp.hpp  CvStereoGCState.pypp.cpp  CvStringHashNode.pypp.cpp  LDetector.pypp.cpp  OneWayDescriptor.pypp.cpp  Point2d.pypp.cpp  Point2f.pypp.cpp  Point3d.pypp.cpp  Ptr_CvFileStorage.pypp.cpp  Ptr_CvFileStorage.pypp.hpp  RNG.pypp.cpp  SavedIndexParams.pypp.cpp  Scalar.pypp.cpp  SearchParams.pypp.cpp  Size2i.pypp.cpp  StereoBM.pypp.hpp  Vec2d.pypp.cpp  Vec2f.pypp.cpp  Vec3f.pypp.hpp  Vec3s.pypp.cpp  Vec4b.pypp.cpp  Vec6f.pypp.cpp  pyopencvext_free_functions.pypp.cpp  pyopencvext_global_variables.pypp.cpp
(+2078 files in other folders)
